AG-8878 fix filters tags tooltip
Merge in EXTENSIONS/browser-extension from fix/AG-8878 to feature/AG-2737

Squashed commit of the following:

commit 885d256f108812acc4ec6fa769d62f28565d7258
Merge: ec31fc03e 6d882c993
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 2 14:48:48 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-8878

commit ec31fc03e36fec006324d3895c0aa517df716f76
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 2 14:48:29 2021 +0300

    clean up styles

commit c4a5928b82e830d9a9d8f2313f2afcd0a2606064
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Fri Jul 2 12:06:15 2021 +0300

    fix popover position qon scrollable page

commit 142ca2acda15c71fd2a06039e8b7ad1417d70d4b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jul 1 22:42:25 2021 +0300

    fix filters tags tooltip

--- a/Extension/assets/css/style.css
+++ b/Extension/assets/css/style.css
@@ -1294,61 +1294,6 @@ li.active .toggler:before {
   margin-right: 0;
 }
 
-.opt-name__tag {
-  position: relative;
-  cursor: pointer;
-  margin-right: 20px;
-  margin-top: 10px;
-  color: #66b574;
-}
-
-.opt-name__tag:last-child {
-  margin-right: 0;
-}
-
-.opt-name__tag:after {
-  content: '▲';
-  z-index: 2;
-  display: block;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 17px;
-  left: calc(50% - 3px);
-  color: #fff;
-  text-shadow: 0 -1px 2px rgba(162, 161, 161, .3);
-}
-
-.opt-name__tag:before {
-  display: block;
-  position: absolute;
-  z-index: 1;
-  width: 200px;
-  top: 25px;
-  left: calc(50% - 115px);
-  visibility: hidden;
-  text-align: left;
-  opacity: 0;
-  content: attr(data-tooltip);
-  border-radius: 3px;
-  padding: 24px;
-  color:  rgba(77, 77, 77, 0.82);
-  line-height: 19px;
-  font-size: 13px;
-  background-color: #ffffff;
-  -webkit-transition: 0.3s ease opacity;
-  -o-transition: 0.3s ease opacity;
-  transition: 0.3s ease opacity;
-  -webkit-box-shadow: 0 0 10px 1px rgba(162, 161, 161, 0.3);
-  box-shadow: 0 0 10px 1px rgba(162, 161, 161, 0.3);
-}
-
-.opt-name__tag[data-tooltip]:hover:after,
-.opt-name__tag[data-tooltip]:hover:before {
-  visibility: visible;
-  opacity: 1;
-}
-
 .title-wr {
   display: flex;
   align-items: flex-end;
