--- a/Extension/src/pages/options/styles/setting.pcss
+++ b/Extension/src/pages/options/styles/setting.pcss
@@ -118,57 +118,6 @@
         flex-wrap: wrap;
     }
 
-    &__tag {
-        position: relative;
-        cursor: pointer;
-        margin-right: 20px;
-        margin-top: 10px;
-        color: var(--green74);
-
-        &:before {
-            display: block;
-            position: absolute;
-            z-index: 1;
-            width: 200px;
-            top: 25px;
-            left: calc(50% - 115px);
-            visibility: hidden;
-            opacity: 0;
-            content: attr(data-tooltip);
-            border-radius: 3px;
-            padding: 24px;
-            color: var(--gray-base);
-            line-height: 19px;
-            font-size: 13px;
-            background-color: #ffffff;
-            transition: 0.3s ease opacity;
-            box-shadow: 0 0 10px 1px rgba(162, 161, 161, 0.3);
-
-            @media (prefers-color-scheme: dark) {
-                color: var(--gray300)
-            }
-        }
-
-        &:after {
-            content: '▲';
-            z-index: 2;
-            display: block;
-            visibility: hidden;
-            opacity: 0;
-            position: absolute;
-            top: 14px;
-            left: calc(50% - 3px);
-            color: #fff;
-            text-shadow: 0 -1px 2px rgba(162, 161, 161, .3);
-        }
-
-        &:hover:before,
-        &:hover:after {
-            visibility: visible;
-            opacity: 1;
-        }
-    }
-
     &__icon {
         color: var(--green400);
         margin-right: 20px;
@@ -244,12 +193,6 @@
             color: var(--gray-base);
         }
 
-        &__tag {
-            &:before {
-                color: var(--gray-base);
-            }
-        }
-
         &__area {
             &:hover {
                 background-color: var(--gray100);
@@ -274,12 +217,6 @@
 
         &__title {
             color: var(--gray300)
-        }
-
-        &__tag {
-            &:before {
-                color: var(--gray300)
-            }
         }
 
         &__area {
